started working on modals fixed some spacing

--- a/style.css
+++ b/style.css
@@ -66,7 +66,11 @@ footer {
   opacity: 1;
 }
 .contactInfo {
-	
+	padding-top: 60px;
+}
+.footer {
+	font-family: 'Gruppo', cursive;
+	color: white;
 }
 /*.vl {
 	padding-left: 50%;
